--- a/uBetCha/Web.config
+++ b/uBetCha/Web.config
@@ -6,9 +6,11 @@
   -->
 
 <configuration>
-    <system.web>
-      <compilation debug="true" strict="false" explicit="true" targetFramework="4.5.2" />
-      <httpRuntime targetFramework="4.5.2" />
-    </system.web>
-
+  <system.web>
+    <compilation debug="true" strict="false" explicit="true" targetFramework="4.5.2" />
+    <httpRuntime targetFramework="4.5.2" />
+  </system.web>
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
 </configuration>
