--- a/balloonfeststart2_11_21/Web.config
+++ b/balloonfeststart2_11_21/Web.config
@@ -13,6 +13,13 @@
     <system.web>
       <compilation debug="true" strict="false" explicit="true" targetFramework="4.5.2" />
       <httpRuntime targetFramework="4.5.2" />
+
+      <pages maintainScrollPositionOnPostBack="true" />
+
     </system.web>
 
+  <appSettings>
+    <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
+  </appSettings>
+  
 </configuration>
