--- a/uBetCha/Web.config
+++ b/uBetCha/Web.config
@@ -6,6 +6,10 @@
   -->
 
 <configuration>
+  <connectionStrings>
+    <add name="UBetChaDB" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database.mdf;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" strict="false" explicit="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
