Hey guys., Just spent six hours on this. Pls be nice to me :)

--- a/uBetCha/Web.config
+++ b/uBetCha/Web.config
@@ -10,14 +10,42 @@
     <add name="UBetChaDB" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database.mdf;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
+  
   <system.web>
     <compilation debug="true" strict="false" explicit="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
 
     <pages maintainScrollPositionOnPostBack="true" />
 
+    <authentication mode="Forms">
+      <forms defaultUrl="~/Default.aspx" loginUrl="~/login.aspx" slidingExpiration="true" timeout="2880" />
+    </authentication>
+
   </system.web>
+
+  <!--https://www.codeproject.com/Articles/2905/Role-based-Security-with-Forms-Authentication-->
+  <location path="AdminPages">
+    <system.web>
+      <authorization>
+        <!-- Order and case are important below -->
+        <allow roles="Admin" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  <location path="MemberPages">
+    <system.web>
+      <authorization>
+        <!-- Order and case are important below -->
+        <allow roles="Member,Admin" />
+        <deny users="*" />
+      </authorization>
+    </system.web>
+  </location>
+ 
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
   </appSettings>
+  
+  
 </configuration>
